# local-ai-assistant

./: .env.example  .gitignore  AGENT_INTELLIGENCE_GAP_ANALYSIS.md  AGENT_INTELLIGENCE_IMPLEMENTATION.md  ANALYSIS_AND_FIXES.md  AUDIT_REPORT.md  CURSOR_COPILOT_INTELLIGENCE_COMPARISON.md  DATA_PERSISTENCE.md  FIXES_APPLIED.md  IMPROVEMENTS_COMPLETED.md  INTELLIGENCE_GAP_ANALYSIS_COMPLETE.md  PRODUCTION_READY_CHECKLIST.md  README.md  README_IMPROVEMENTS.md  README_TAPAN_AI_V2.md  SYSTEM_AUDIT_SUMMARY.md  TESTING_GUIDE.md  VERIFICATION_REPORT.md  check_models.py  debug_regex.py  process_indentation.py  pyproject.toml  requirements.txt  run_tapan.bat  start.py  start_agent.py  test_interactive_companion.py  test_supermemory_accuracy.py
_schemas/: finance_schema.sql  habits_schema.sql  human_brain_schema.sql  journal_schema.sql  memory_schema.sql  persona_schema.sql  profile_schema.sql  reminders_schema.sql
configs/: ollama.yaml
data_stress_10k/: profile.json
scripts/: cleanup_repo.py  setup_jarvis_models.py  setup_ollama.py  start.bat  start.sh
src/: __init__.py  main.py  models.py
tapan_ai/: main.py  models.py
test_data/: profile.json
test_data_interactive/: profile.json
tests/: stress_test_10k_commands.py  stress_test_human_brain.py  test_bitnet_backend.py  test_cognee_tool.py  test_cognitive_architecture.py  test_companion_hour_simulation.py  test_companion_prompt.py  test_comprehensive.py  test_comprehensive_verification.py  test_daylife_alignment.py  test_error_recovery.py  test_experience_migration.py  test_human_brain.py  test_human_brain_extended.py  (+45 more)
(+183 files in other folders)
