[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tapan-ai"
version = "1.0.0"
description = "Tapan AI v1 - Cinematic Local AI Companion"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "spacy>=3.7.0",
    "vaderSentiment>=3.3.2",
    "python-multipart>=0.0.9",
    "websockets>=12.0",
    "aiofiles>=23.2.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
